More code updates